# BME-463

./: CMakeLists.txt  Filters.c  Final_Project.c  Functions.h  Noise_Detection.cpp  PWaveScore.cpp  Plotting_signals.py  Potential template matching function  QRS_Detection.cpp  Single_Lead_AFib_Detection.cpp  _2_qrs_peaks.csv  _4_QRStimestamps.csv  _5_PWaveAmps.csv  _6_SearchRegions.csv  _7_template.csv  _8_diff_signal.csv  results.csv  tune_threshold.py  wfdb_demo.py
AF_Detector/: Functions.h  Noise_Detection.cpp  Plotting_signals.py  QRS_Detection.cpp  Single_Lead_AFib_Detection.cpp
New_Real-Time/: Filters.c  Functions.h  Noise_Detection.cpp  PWaveScore.cpp  Plotting_signals.py  QRS_Detection.cpp  README.md  Single_Lead_AFib_Detection.cpp  _1_raw.csv  _3_PWave_BPF.csv  _4_QRStimestamps.csv  _5_PWaveAmps.csv  _6_SearchRegions.csv  wfdb_demo.py
Real-Time/: CMakeLists.txt  README.md  adc_ecg.c  adc_ecg.h  classify.c  classify.h  features.c  features.h  filters.c  filters.h  main.c  qrs.c  qrs.h
output/af/: record_A00_A00004_mlii_adc.txt  record_A00_A00005_mlii_adc.txt  record_A00_A00009_mlii_adc.txt  record_A00_A00015_mlii_adc.txt  record_A00_A00027_mlii_adc.txt  record_A00_A00054_mlii_adc.txt  record_A00_A00067_mlii_adc.txt  record_A00_A00071_mlii_adc.txt  record_A00_A00087_mlii_adc.txt  record_A00_A00090_mlii_adc.txt  record_A00_A00101_mlii_adc.txt  record_A00_A00102_mlii_adc.txt  record_A00_A00107_mlii_adc.txt  record_A00_A00128_mlii_adc.txt  record_A00_A00132_mlii_adc.txt  record_A00_A00137_mlii_adc.txt  record_A00_A00156_mlii_adc.txt  (+11 more)
(+96 files in other folders)
